<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.tvshowdetail.TvShowDetailActivity"
    tools:showIn="@layout/activity_tv_show_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tvShowPoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/poster_alita" />

        <TextView
            android:id="@+id/tvShowTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:text="@string/dummy_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tvShowPoster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/tvShowReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/dummy_date"
            app:layout_constraintStart_toStartOf="@id/tvShowTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvShowTitle" />

        <ImageView
            android:id="@+id/timespace"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_timelapse_24"
            app:layout_constraintStart_toEndOf="@+id/tvShowReleaseDate"
            app:layout_constraintTop_toBottomOf="@+id/tvShowTitle" />

        <TextView
            android:id="@+id/tvShowDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/dummy_duration"
            app:layout_constraintStart_toEndOf="@+id/timespace"
            app:layout_constraintTop_toBottomOf="@+id/tvShowTitle" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/tvShowRating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:max="5"
            app:layout_constraintStart_toStartOf="@id/tvShowTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvShowReleaseDate"
            tools:rating="4"/>

        <TextView
            android:id="@+id/tvShowGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dummy_genre"
            app:layout_constraintStart_toStartOf="@id/tvShowTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShowRating" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sinopsis"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvShowPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvShowPoster" />

        <TextView
            android:id="@+id/tvShowSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/welcome_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

        <TextView
            android:id="@+id/tv_seasons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/season"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvShowPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvShowSinopsis" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_seasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:elevation="8dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintHeight_max="500dp"
            app:layout_constraintHeight_min="250dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_seasons">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_seasons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_seasons"
                tools:itemCount="2"/>

        </androidx.cardview.widget.CardView>

<!--        <TextView-->
<!--            android:id="@+id/tv_video"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/videos"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintStart_toStartOf="@id/tvShowPoster"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/cv_seasons" />-->

<!--        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
<!--            android:id="@+id/ytPlayerView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_video"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>