<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.moviedetail.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/poster_alita" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:text="@string/dummy_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/moviePoster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/movieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/dummy_date"
            app:layout_constraintStart_toStartOf="@id/movieTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <ImageView
            android:id="@+id/timespace"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_timelapse_24"
            app:layout_constraintStart_toEndOf="@+id/movieReleaseDate"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <TextView
            android:id="@+id/movieDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/dummy_duration"
            app:layout_constraintStart_toEndOf="@+id/timespace"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/movieRating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:max="5"
            app:layout_constraintStart_toStartOf="@id/movieTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate"
            tools:rating="4"/>

        <TextView
            android:id="@+id/movieGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dummy_genre"
            app:layout_constraintStart_toStartOf="@id/movieTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieRating" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sinopsis"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/moviePoster"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

        <TextView
            android:id="@+id/movieSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/welcome_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

<!--        <TextView-->
<!--            android:id="@+id/tv_video"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/videos"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintStart_toStartOf="@id/moviePoster"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/movieSinopsis" />-->

<!--        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
<!--            android:id="@+id/ytPlayerView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="16dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_video"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>